force-app/main/default/objects/Quote/fields/Annual_License_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Annual_License_Subtotal__c</fullName>
    <formula>(Opportunity.Total_License_Due__c/ Opportunity.License_Term__c)*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual License Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>