force-app/main/default/objects/Quote/fields/Co_Termination__c.field-meta.xml
<CustomField>
    <fullName>Co_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a customer is requesting co-termination language to be added into the contract! Once checked, all output documents from this quote will include the specific language!</inlineHelpText>
    <label>Co-Termination?</label>
    <type>Checkbox</type>
</CustomField>