force-app/main/default/objects/Quote/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>