force-app/main/default/objects/Quote/fields/Finance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner__c</fullName>
    <description>A drop down for reps to select the finance partner they are using</description>
    <label>Finance Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dell Financial Services</fullName>
            </value>
            <value>
                <fullName>Crestmark Vendor Finance a Meta Bank company</fullName>
            </value>
            <value>
                <fullName>Samsara Capital Finance</fullName>
            </value>
            <value>
                <fullName>VAR Technology</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>Consultative Funding</fullName>
                <label>TFC</label>
            </value>
            <value>
                <fullName>Ascentium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>