force-app/main/default/objects/Quote/fields/First_Months_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Months_Payment__c</fullName>
    <formula>((Opportunity.Total_License_Due__c/Opportunity.License_Term__c) + Opportunity.Total_Hardware_Due__c + Opportunity.Shipping_and_Handling__c  + Opportunity.Hardware_Sales_Tax__c) +  Monthly_License_Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Month Payment consists of the following:
- Full hardware cost
- hardware sales tax
- shipping and handling
- First Month of license cost
- One month License sales tax</inlineHelpText>
    <label>First Months Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>