force-app/main/default/objects/Quote/fields/Hardware_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Sales_Tax__c</fullName>
    <formula>Opportunity.Hardware_Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>