force-app/main/default/objects/Quote/fields/Latest_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Close_Date__c</fullName>
    <inlineHelpText>Latest close date without changing the license term</inlineHelpText>
    <label>Latest Close Date</label>
    <type>Date</type>
</CustomField>