force-app/main/default/objects/Quote/fields/License_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>License_Sales_Tax__c</fullName>
    <formula>Monthly_License_Sales_Tax__c  *  License_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>