force-app/main/default/objects/Quote/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <formula>Opportunity.License_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>