force-app/main/default/objects/Quote/fields/Monthly_License_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Monthly_License_Sales_Tax__c</fullName>
    <formula>(Opportunity.License_Sales_Tax__c/ Opportunity.License_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly License Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>