force-app/main/default/objects/Quote/fields/Monthly_VAT__c.field-meta.xml
<CustomField>
    <fullName>Monthly_VAT__c</fullName>
    <formula>Opportunity.Sales_Tax__c / License_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>