force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment terms (from Opportunity record)</description>
    <formula>TEXT(Opportunity.Initial_Payment_Terms__c)</formula>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>