force-app/main/default/objects/Quote/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <description>Sales tax pulled from Opportunity Record. Use this field, not built-in &quot;Tax&quot; field.</description>
    <formula>Sales_Tax_Time_Stamp__c</formula>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>