force-app/main/default/objects/Quote/fields/Sales_Tax_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Time_Stamp__c</fullName>
    <label>Sales Tax Time Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>