force-app/main/default/objects/Quote/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Opportunity shipping address (use in place of  quote ship-to)</description>
    <formula>Opportunity.Shipping_Address_NEW__r.Shipping_Address_Line_1__c  &amp;&quot;,&quot;&amp; BR()&amp;
 Opportunity.Shipping_Address_NEW__r.Shipping_City__c &amp;&quot;,&quot;&amp;BR()&amp;
TEXT( Opportunity.Shipping_Address_NEW__r.Shipping_State__c )&amp;IF(ISBLANK(TEXT(Opportunity.Shipping_Address_NEW__r.Shipping_State__c)),&quot;&quot;,&quot;, &quot;)&amp; Opportunity.Shipping_Address_NEW__r.Shipping_Zip_Code__c&amp;&quot;, &quot;&amp;BR()&amp;TEXT(Opportunity.Shipping_Address_NEW__r.Shipping_Country__c)</formula>
    <inlineHelpText>Opportunity shipping address</inlineHelpText>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>