force-app/main/default/objects/Quote/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total Price (discount-adjusted line items) + sales tax (from oppty) + shipping (from oppty)</description>
    <formula>Opportunity.Amount +  Opportunity.Sales_Tax__c   +  Opportunity.Shipping_and_Handling__c + Opportunity.X3rd_Party_Products_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>