force-app/main/default/objects/Quote/fields/Total_Annual_License_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_License_Due__c</fullName>
    <formula>(Opportunity.Total_License_Due__c/ Opportunity.License_Term__c)*12 + Annual_License_Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Total License Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>