force-app/main/default/objects/Quote/recordTypes/Direct_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Direct_Subscription</fullName>
    <active>true</active>
    <description>Direct, non-express, monthly / annual payments</description>
    <label>Direct Subscription (Monthly / Annual)</label>
</RecordType>