force-app/main/default/objects/Quote/recordTypes/Pre_Paid_Lease.recordType-meta.xml
<RecordType>
    <fullName>Pre_Paid_Lease</fullName>
    <active>true</active>
    <label>Pre-Paid / Lease</label>
</RecordType>