force-app/main/default/objects/Quote/validationRules/Industrial_Discount_Approval_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Industrial_Discount_Approval_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
Opportunity.RecordTypeId = &apos;0121a000000VnAB&apos;, 
Opportunity.RecordTypeId = &apos;0121a000000VnUx&apos; 
), 

NOT(OR( 
($Permission.Validation_Rule_Exemption), 
(CONTAINS($Profile.Name,&quot;Finance&quot;)), 
($Profile.Name=&quot;Order Operations Admin&quot;) 
) 
), 
OR(Opportunity.Blended_Discount__c &gt; Opportunity.Approved_Discount__c,  Opportunity.Industrial_Discount_Approval_Needed__c = true 
))</errorConditionFormula>
    <errorMessage>Discount approval is required for this opportunity before creating a quote. Please lower discretionary discount in the Industrial Opportunity, or request approval from a manager.</errorMessage>
</ValidationRule>